Added an embedded tomcat configuration to the pom.xml.